Optimized font rendering. Fonts now use one-channel atlases. Added ARB_shader_subroutine extensions. Change OpenGL profile to compability because of extensions problem on NVIDIA (should be tested on API and on Linux) 2D renderer now uses shader subroutines. Fix bug with font metrics. Added simple frame time counter

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,3 +8,7 @@
 -- Set bytes read to zero at the beginning of DebugReadFile function
 
 -- Delete dependencies folder
+
+!!!!!
+-- TEST OPENGL ETTENSIONS ON LINUX WITH NVIDIA
+-- TEST OPENGL EXTENSIONS ON ATI
